@@ -11,10 +11,15 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 
 public class PostService {
     private final Set<Post> posts = new HashSet<>();
+    private final ExecutorService executorService = Executors.newFixedThreadPool(7);
+
 
     public Post createPost(AdminUser user, String title, String content, Object groupOrCoP) {
         if (groupOrCoP instanceof Group group) {
@@ -27,16 +32,30 @@ public class PostService {
 
     private GroupPost createGroupPost(AdminUser user, String title, String content, Group group) {
         GroupPost post = new GroupPost(title, content, user, group);
-        posts.add(post);
-        System.out.println(user.getUsername() + " created a post in group: " + group.getName());
-        return post;
+        Future<?> future = executorService.submit(() -> {
+            posts.add(post);
+            System.out.println("Post titled '" + post.getTitle() + "' has been added to the set.");
+        });
+        try {
+            future.get(); // wait for the task to complete
+            return post;
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     private CoPPost createCoPPost(AdminUser user, String title, String content, CommunityOfPractice cop) {
         CoPPost post = new CoPPost(title, content, user, cop, "", "", "");
-        posts.add(post);
-        System.out.println(user.getUsername() + " created a post in CoP: " + cop.getName());
-        return post;
+        Future<?> future = executorService.submit(() -> {
+            posts.add(post);
+            System.out.println("Post titled '" + post.getTitle() + "' has been added to the set.");
+        });
+        try {
+            future.get(); // wait for the task to complete
+            return post;
+        } catch (InterruptedException | ExecutionException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public Set<Post> getAllPosts() {
@@ -49,24 +68,24 @@ public class PostService {
 
     public List<Post> getPostsByGroup(Group group) {
         return posts.stream()
-                .filter(post -> post instanceof GroupPost
-                        && ((GroupPost) post).getGroup().equals(group))
-                .collect(Collectors.toList());
+                .filter(post -> post instanceof GroupPost groupPost
+                        && groupPost.getGroup().equals(group))
+                .toList();
     }
 
     public List<Post> getPostsByCoP(CommunityOfPractice cop) {
         return posts.stream()
-                .filter(post -> post instanceof CoPPost
-                        && ((CoPPost) post).getCommunityOfPractice().equals(cop))
-                .collect(Collectors.toList());
+                .filter(post -> post instanceof CoPPost coPPost
+                        && coPPost.getCommunityOfPractice().equals(cop))
+                .toList();
     }
 
     public List<Post> getPinnedPostsFromCoP(CommunityOfPractice cop) {
         return posts.stream()
-                .filter(post -> post instanceof CoPPost
-                        && ((CoPPost) post).getCommunityOfPractice().equals(cop)
+                .filter(post -> post instanceof CoPPost coPPost
+                        && coPPost.getCommunityOfPractice().equals(cop)
                         && post.isPinned())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Post findPostByTitle(String title) {
